# cobweb

./: .gitattributes  .gitignore  README.md  biome.json  index.html  justfile  package.json  server.ts  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
agent/: Cargo.toml
agent/service-installers/: README.md
agent/service-installers/launchd/: com.cobweb.agent.plist
agent/service-installers/systemd/: cobweb-agent.service
agent/service-installers/windows/: install.ps1  uninstall.ps1
agent/src/: buffer.rs  config.rs  connection.rs  dispatcher.rs  lib.rs  logging.rs  main.rs  protocol.rs  transport.rs
agent/src/capabilities/: cli.rs  exec.rs  file.rs  mod.rs
agent/src/collectors/: heartbeat.rs  mod.rs  peer_view.rs
agent/tests/: connection_integration.rs  exec_integration.rs  file_put_integration.rs
dashboard/: package.json  tsconfig.json
dashboard/src/lib/api/: client.ts
dashboard/src/lib/components/dashboard/: Dashboard.svelte  Matrix.svelte  NodeDetailSide.svelte  NodeMetrics.svelte
dashboard/src/lib/components/distribute/: CapabilityList.svelte  DistributionCenter.svelte
dashboard/src/lib/components/overlays/: DrillDownPopover.svelte
dashboard/src/lib/components/ui/: CellTooltip.svelte
dashboard/src/lib/data/: mock-nodes.ts
dashboard/src/lib/state/: mesh.svelte.ts  tasks.svelte.ts  ui.svelte.ts
docs/: agent-design.md  agent-impl-plan.md  design-brief.md  easytier-research.md  tech-stack.md
scripts/: install-hooks.ts  rewrite-imports.ts
scripts/hooks/: pre-commit  pre-push
server/: package.json  tsconfig.json
server/src/: agent-install.ts  agent-registry.ts  agent-ws.ts  ca.ts  config.ts  dns.ts  easytier.ts  index.ts  mesh.ts  routes.ts  sampler.ts  tasks.ts
src/: App.svelte  main.ts
src/lib/: CapabilityList.svelte  CellTooltip.svelte  ChannelBadge.svelte  CollapsedPanel.svelte  CommandPalette.svelte  ComposeView.svelte  ContextMenuHost.svelte  Dashboard.svelte  DistributionCenter.svelte  DrillChart.svelte  DrillDownPopover.svelte  DualStat.svelte  HistoryView.svelte  Legend.svelte  Matrix.svelte  NodeDetailSide.svelte  NodeMetrics.svelte  ResultView.svelte  Sparkline.svelte  TerminalDrawer.svelte  TerminalNodePicker.svelte  TerminalSession.svelte  TopBar.svelte  data.ts  menu-builders.ts  terminal-mock.ts  ui-state.svelte.ts
src/lib/api/: client.ts
src/lib/components/dashboard/: CollapsedPanel.svelte  Dashboard.svelte  Matrix.svelte
src/lib/components/distribute/: ComposeView.svelte  DistributionCenter.svelte  HistoryView.svelte  ResultView.svelte
src/lib/components/overlays/: CommandPalette.svelte  ContextMenuHost.svelte  DrillDownPopover.svelte
src/lib/components/shell/: StatusBar.svelte  TopBar.svelte
src/lib/components/terminal/: TerminalDrawer.svelte  TerminalNodePicker.svelte  TerminalSession.svelte
src/lib/components/ui/: ChannelBadge.svelte  DualStat.svelte  Legend.svelte
src/lib/data/: mock-nodes.ts  terminal-mock.ts
src/lib/state/: mesh.svelte.ts  tasks.svelte.ts  ui.svelte.ts
src/styles/: cobweb.css
